cp project/force-app/main/default/objects/Document__c/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <label>Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uploaded</fullName>
                <default>true</default>
                <label>Uploaded</label>
            </value>
            <value>
                <fullName>Pending Verification</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>