cp project/force-app/main/default/objects/Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAN</fullName>
            </value>
            <value>
                <fullName>Aadhaar</fullName>
            </value>
            <value>
                <fullName>Photo</fullName>
            </value>
            <value>
                <fullName>KYC</fullName>
                <default>true</default>
                <label>KYC</label>
            </value>
            <value>
                <fullName>Cost Sheet</fullName>
            </value>
            <value>
                <fullName>Consolidated Receipt</fullName>
            </value>
            <value>
                <fullName>Agreement Demand Letter</fullName>
            </value>
            <value>
                <fullName>Draft Sale Agreement</fullName>
            </value>
            <value>
                <fullName>Allotment Letter</fullName>
            </value>
            <value>
                <fullName>Sale Agreement</fullName>
            </value>
            <value>
                <fullName>Sale Deed</fullName>
            </value>
            <value>
                <fullName>Possession Certificate</fullName>
            </value>
            <value>
                <fullName>Key Handover Letter</fullName>
            </value>
            <value>
                <fullName>Maintenance Letter</fullName>
            </value>
            <value>
                <fullName>Cancellation Letter</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
                <isActive>false</isActive>
                <label>Loan</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
            <value>
                <fullName>Passport</fullName>
                <isActive>false</isActive>
                <label>Passport</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>