cp project/force-app/main/default/objects/Document__c/fields/Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Upload_Date__c</fullName>
    <label>Upload Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>