cp project/force-app/main/default/objects/Document__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Documents1</relationshipName>
    <type>Lookup</type>
</CustomField>